--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
   },
   "dependencies": {
     "@middy/core": "^2.5.3",
-    "@middy/http-json-body-parser": "^2.5.3"
+    "@middy/http-json-body-parser": "^2.5.3",
+    "inversify": "^6.0.1",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.19.1",
     "@babel/preset-env": "7.19.1",
     "@babel/preset-typescript": "^7.18.6",
     "@serverless/typescript": "^3.0.0",
     "@types/aws-lambda": "^8.10.71",
     "@types/jest": "29.0.3",
-    "@types/node": "^14.14.25",
+    "@types/node": "^14.18.29",
+    "babel-plugin-parameter-decorator": "1.0.16",
     "esbuild": "^0.14.11",
     "jest": "29.0.3",
     "json-schema-to-ts": "^1.5.0",
@@ -37,6 +42,6 @@
       "^@root(.*)$": "<rootDir>/src$1",
       "^@functions(.*)$": "<rootDir>/src/functions$1",
       "^@libs(.*)$": "<rootDir>/src/libs$1"
-    } 
+    }
   }
 }
