--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@middy/core": "^2.5.3",
+    "@middy/http-cors": "^3.3.4",
     "@middy/http-json-body-parser": "^2.5.3",
     "inversify": "^6.0.1",
     "reflect-metadata": "^0.1.13"
